# ai-python-smart-recipe-shoplist

ai-agentless-recipe-shoplist/: .env.example  README.md  pyproject.toml  test_db.py  test_html_extractor.py  test_json_helper.py
ai-agentless-recipe-shoplist/app/: models.py
ai-agentless-recipe-shoplist/app/api/: v1.py
ai-agentless-recipe-shoplist/app/client/: ai_chat_client.py
ai-agentless-recipe-shoplist/app/config/: logging_config.py  pydantic_config.py  store_config.py
ai-agentless-recipe-shoplist/app/ia_provider/: base_provider.py
ai-agentless-recipe-shoplist/app/scrapers/: api_request_client.py  html_content_extractor.py  html_scraper.py  scraper_factory.py
ai-agentless-recipe-shoplist/app/services/: ai_service.py
ai-agentless-recipe-shoplist/app/static/: app.js  demo.js
ai-agentless-recipe-shoplist/app/storage/: db_manager.py  storage_manager.py
ai-agentless-recipe-shoplist/app/utils/: ai_helpers.py  json_extractor.py  str_helpers.py
ai-agentless-recipe-shoplist/docs/: json_extractor_guide.md  project-overview.md
ai-agentless-recipe-shoplist/request_samples.json/: search_store.json  search_store_one.json
ai-agentless-recipe-shoplist/stub_responses/search_stores/: gazpacho.json
ai-agentless-recipe-shoplist/tests/unit/: test_json_extractor.py
ai-multiagent-mcp-recipe_shoplist/: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
ai-multiagent-mcp-recipe_shoplist/app/: main.py  models.py  orchestrator.py
ai-multiagent-mcp-recipe_shoplist/app/agents/: cache_agent.py  grocery_agent.py  grocery_agent_providers.py  output_agent.py  recipe_agent.py  selector_agent.py
ai-multiagent-mcp-recipe_shoplist/app/mcp_tools/: mcp_cache_db.py  mcp_http_fetch.py
ai-recipe-shoplist/: .env.example  README.md  requirements.txt  requirements_freezen.txt  test_coles_api.py  test_fetch_page.py  test_html_extractor.py  test_store_selector.py
ai-recipe-shoplist/app/: main.py  models.py
ai-recipe-shoplist/app/api/: __init__.py  v1.py
ai-recipe-shoplist/app/client/: ai_chat_client.py
ai-recipe-shoplist/app/config/: __init__.py  logging_config.py  pydantic_config.py  store_config.py
ai-recipe-shoplist/app/ia_provider/: azure_provider.py  base_provider.py  github_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py  stub_provider.py
ai-recipe-shoplist/app/manager/: cache_manager.py  storage_manager.py
ai-recipe-shoplist/app/scrapers/: html_content_processor.py  html_scraper.py
ai-recipe-shoplist/app/services/: ai_service.py  cache_manager.py  content_storage.py  grocery_service.py  price_optimizer.py  store_crawler.py  tokenizer_service.py  web_data_service.py  web_fetcher.py
ai-recipe-shoplist/app/static/: app.js  style.css
ai-recipe-shoplist/app/utils/: __init__.py  ai_helpers.py  html_helpers.py  retry_utils.py
ai-recipe-shoplist/app/web_extractor/: html_extractor.py
ai-recipe-shoplist/request_samples.json/: search_store.json
ai-recipe-shoplist/stub_responses/fetch_product/: aldi_tomato.json
simple-recipe-shoplist-crawler/: .gitignore  .pre-commit-config.yaml  README.md  colab_runbook.ipynb  pyproject.toml  samconfig.toml.template  samtemplate.yaml
simple-recipe-shoplist-crawler/app/: main.py
(+16 files in other folders)
