[project]
name = "ai-multiagent-mcp-recipe_shoplist"
version = "0.1.0"
description = "Modern multi-agent orchestration with LangGraph, OpenAI Agents, and MCP servers"
readme = "README.md"
authors = [ { name = "Fernando Ibanez" } ]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cachetools>=6.2.1",
    "duckdb>=1.4.1",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.0.5",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]

[tool.uv]
# uv configuration
package = true
python = "3.13"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
]
